--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Our recipes cover a wide range of cuisines, from traditional family
+    favorites to international dishes. We believe that cooking should be fun
+    and accessible for everyone, so we've designed our recipes with clear
+    and concise instructions, accompanied by mouth-watering photos that will
+    make you want to get cooking right away."
+    />
+    <title>Global Recipes</title>
   </head>
   <body>
     <div id="root"></div>
